Group jest stats of same type into one chart