@@ -10,7 +10,6 @@ import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nullable;
 
@@ -28,6 +27,9 @@ import org.apache.wicket.markup.html.list.ListView;
 import org.apache.wicket.model.LoadableDetachableModel;
 import org.apache.wicket.model.PropertyModel;
 import org.apache.wicket.request.mapper.parameter.PageParameters;
+
+import com.google.common.base.Preconditions;
+import com.google.common.collect.Lists;
 
 import io.onedev.server.OneDev;
 import io.onedev.server.entitymanager.BuildMetricManager;
@@ -148,68 +150,114 @@ public abstract class BuildMetricStatsPage<T extends AbstractEntity> extends Pro
 
 			@Override
 			protected List<LineSeries> load() {
+				List<LineSeries> serieses = new ArrayList<>();
 				if (parsedQuery != null) {
-					List<Pair<LineSeries, Integer>> serieses = new ArrayList<>();
-					Map<Integer, T> stats = OneDev.getInstance(BuildMetricManager.class).queryStats(getProject(), metricClass, parsedQuery);
+					List<Pair<Method, Integer>> metricGetters = new ArrayList<>();
 					for (Method getter: BeanUtils.findGetters(metricClass)) {
 						MetricIndicator indicator = getter.getAnnotation(MetricIndicator.class);
-						if (indicator != null) {
-							Integer maxValue = indicator.maxValue();
-							if (maxValue == Integer.MIN_VALUE)
-								maxValue = null;
-							Integer minValue = indicator.minValue();
-							if (minValue == Integer.MAX_VALUE)
-								minValue = null;
-							String name = indicator.name();
-							if (name.length() == 0) 
-								name = BeanUtils.getDisplayName(getter);
-							
-							Map<Integer, Integer> discreteValues = new HashMap<>();
-							for (Map.Entry<Integer, T> entry: stats.entrySet()) {
-								try {
-									discreteValues.put(entry.getKey(), (int) getter.invoke(entry.getValue()));
-								} catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-									throw new RuntimeException(e);
-								}
-							}
-							Map<String, Integer> completeValues = new LinkedHashMap<>();
-							if (!discreteValues.isEmpty()) {
-								int minDayValue = Collections.min(discreteValues.keySet());
-								int maxDayValue = Collections.max(discreteValues.keySet());
-								int lastValue = 0;
-								int currentDayValue = minDayValue;
-								while (currentDayValue<=maxDayValue) {
-									Integer currentValue = discreteValues.get(currentDayValue);
-									if (currentValue == null)
-										currentValue = lastValue;
-									else 
-										lastValue = currentValue;
-									Day currentDay = new Day(currentDayValue);
-									String currentDayLabel = String.format("%s-%s-%s", 
-											currentDay.getYear()%100, currentDay.getMonthOfYear()+1, currentDay.getDayOfMonth());
-									completeValues.put(currentDayLabel, currentValue);
-									currentDayValue = new Day(currentDay.getDate().plusDays(1)).getValue();
-								}
-							} 
-							String valueFormatter = indicator.valueFormatter();
-							if (valueFormatter.length() == 0)
-								valueFormatter = null;
-							LineSeries series = new LineSeries(name, completeValues, valueFormatter, minValue, maxValue);
-							serieses.add(new Pair<>(series, indicator.order()));
-						}
+						if (indicator != null) 
+							metricGetters.add(new Pair<>(getter, indicator.order()));
 					}
-					Collections.sort(serieses, new Comparator<Pair<LineSeries, Integer>>() {
+					Collections.sort(metricGetters, new Comparator<Pair<Method, Integer>>() {
 
 						@Override
-						public int compare(Pair<LineSeries, Integer> o1, Pair<LineSeries, Integer> o2) {
+						public int compare(Pair<Method, Integer> o1, Pair<Method, Integer> o2) {
 							return o1.getSecond() - o2.getSecond();
 						}
 						
 					});
-					return serieses.stream().map(it->it.getFirst()).collect(Collectors.toList());
-				} else {
-					return new ArrayList<>();
-				}
+					
+					List<List<Method>> groupedMetricGetters = new ArrayList<>();
+					metricGetters.stream().map(it->it.getFirst()).forEach(it-> {
+						MetricIndicator indicator = Preconditions.checkNotNull(it.getAnnotation(MetricIndicator.class));
+						if (indicator.group().length() != 0) {
+							List<Method> metricGettersOfGroup = null;
+							for (List<Method> each: groupedMetricGetters) {
+								if (each.get(0).getAnnotation(MetricIndicator.class).group().equals(indicator.group())) {
+									metricGettersOfGroup = each;
+									break;
+								}
+							}
+							if (metricGettersOfGroup == null) {
+								metricGettersOfGroup = new ArrayList<>();
+								groupedMetricGetters.add(metricGettersOfGroup);
+							}
+							metricGettersOfGroup.add(it);
+						} else {
+							groupedMetricGetters.add(Lists.newArrayList(it));
+						}
+					});
+					
+					Map<Integer, T> stats = OneDev.getInstance(BuildMetricManager.class)
+							.queryStats(getProject(), metricClass, parsedQuery);
+
+					for (List<Method> group: groupedMetricGetters) {
+						MetricIndicator indicator = group.get(0).getAnnotation(MetricIndicator.class);
+						
+						String groupName = indicator.group();
+						if (groupName.length() == 0)
+							groupName = null;
+						
+						Integer maxValue = indicator.maxValue();
+						if (maxValue == Integer.MIN_VALUE)
+							maxValue = null;
+
+						Integer minValue = indicator.minValue();
+						if (minValue == Integer.MAX_VALUE)
+							minValue = null;
+
+						String valueFormatter = indicator.valueFormatter();
+						if (valueFormatter.length() == 0)
+							valueFormatter = null;
+						
+						List<String> lineNames = new ArrayList<>();
+						List<String> lineColors = new ArrayList<>();
+						for (Method getter: group) {
+							indicator = getter.getAnnotation(MetricIndicator.class);
+							String name = indicator.name();
+							if (name.length() == 0) 
+								name = BeanUtils.getDisplayName(getter);
+							lineNames.add(name);
+							lineColors.add(indicator.color());
+						}
+						
+						Map<Integer, List<Integer>> discreteValues = new HashMap<>();
+						for (Map.Entry<Integer, T> entry: stats.entrySet()) {
+							List<Integer> lineValues = new ArrayList<>();
+							for (Method getter: group) {
+								try {
+									lineValues.add((int) getter.invoke(entry.getValue()));
+								} catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
+									throw new RuntimeException(e);
+								}
+							}
+							discreteValues.put(entry.getKey(), lineValues);
+						}
+						
+						Map<String, List<Integer>> completeValues = new LinkedHashMap<>();
+						if (!discreteValues.isEmpty()) {
+							int minDayValue = Collections.min(discreteValues.keySet());
+							int maxDayValue = Collections.max(discreteValues.keySet());
+							List<Integer> lastValues = null;
+							int currentDayValue = minDayValue;
+							while (currentDayValue<=maxDayValue) {
+								List<Integer> currentValues = discreteValues.get(currentDayValue);
+								if (currentValues == null)
+									currentValues = lastValues;
+								else 
+									lastValues = currentValues;
+								Day currentDay = new Day(currentDayValue);
+								String currentDayLabel = String.format("%02d-%02d-%02d", 
+										currentDay.getYear()%100, currentDay.getMonthOfYear()+1, currentDay.getDayOfMonth());
+								completeValues.put(currentDayLabel, currentValues);
+								currentDayValue = new Day(currentDay.getDate().plusDays(1)).getValue();
+							}
+						} 
+						serieses.add(new LineSeries(groupName, lineNames, completeValues, valueFormatter, 
+								minValue, maxValue, lineColors));
+					}
+				} 
+				return serieses;
 			}
 			
 		}) {
